--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,6 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.enableJetifier=true
 android.useAndroidX=true
 android.enableR8=true
+android.sdk.home=$HOME/.android
+android.ndk.useDirectory=false
