--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ description: Le esatte dosi per i tuoi impasti in pochi secondi
 version: 1.1.0+9
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
@@ -12,23 +13,23 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
+
+  animations: ^2.0.11
+  curved_navigation_bar: ^1.0.6
+  cupertino_icons: ^1.0.8
+  lottie: ^3.1.3
+  another_flushbar: ^1.12.30
+  font_awesome_flutter: ^10.7.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  package_info_plus: ^9.0.0
+  path_provider: ^2.1.4
+  provider: ^6.1.2
+  share_plus: ^12.0.0
+  sqflite: ^2.3.3+1
+  url_launcher: ^6.3.0
   
-  animations: ^1.0.0+5
-  bubble_bottom_bar: ^1.2.0
-  cupertino_icons: ^0.1.2
-  facebook_audience_network: ^0.3.3
-  flare_flutter: ^1.8.1
-  flushbar: ^1.8.0
-  font_awesome_flutter: ^8.4.0
-  hive: ^1.3.0
-  hive_flutter: ^0.3.0+1
-  package_info: ^0.4.0+4
-  path_provider: ^1.1.0
-  provider: ^4.0.1
-  share: ^0.6.1+1
-  sqflite: ^1.1.5
-  url_launcher: ^5.0.3
-  
+
 
 dev_dependencies:
   flutter_test:
